Bug 1484811 - Left align the toolbar controls when RDM is left aligned. r=miker
UltraBlame original commit: 91accf6cca8d1b8e557069775bbd7113c9f7e707

--- a/devtools/client/responsive.html/index.css
+++ b/devtools/client/responsive.html/index.css
@@ -351,6 +351,31 @@ none
 }
 #
 toolbar
+.
+left
+-
+aligned
+{
+grid
+-
+template
+-
+columns
+:
+min
+-
+content
+min
+-
+content
+min
+-
+content
+auto
+;
+}
+#
+toolbar
 -
 center
 -
@@ -385,6 +410,30 @@ justify
 self
 :
 center
+;
+margin
+:
+1px
+;
+}
+#
+toolbar
+.
+left
+-
+aligned
+#
+toolbar
+-
+end
+-
+controls
+{
+justify
+-
+self
+:
+end
 ;
 }
 #
